--- a/styles/base.css
+++ b/styles/base.css
@@ -47,6 +47,9 @@ table {
 	border-spacing: 0;
 }
 /* Global Styles */
+* {
+	box-sizing: border-box;
+}
 body {
   font-family: sans-serif;
 }
@@ -92,3 +95,54 @@ body {
 width: 100%;
 
 }
+
+header{
+	position: fixed;
+	top: 0;
+	width: 100%;
+	color: #ffffff;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 20px;
+}
+header h1 {
+	font-size:3em;
+}
+header h1 span {
+	display: inline-block;
+	background: url(../img/logo-icon.png) no-repeat;
+	width: 45px;
+	height: 45px;
+}
+
+header nav ul li{
+	display: inline-block;
+	margin-right: 20px;
+}
+header nav ul li a {
+	color:#ffffff;
+	text-decoration: none;
+}
+
+.banner {
+	background:url('../img/banner.jpg') no-repeat;
+	display: flex;
+	align-items: flex-end;
+	height: 600px;
+	padding:20px;
+}
+.banner ul li {
+	display: block;
+	border: 1px solid #ffffff;
+	width: 145px;
+	height: 145px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	margin: 5px;
+	float: left;
+	font-size: 1.3em;
+}
+.next-line {clear: both;}
