--- a/styles/base.css
+++ b/styles/base.css
@@ -150,6 +150,7 @@ header nav ul li a {
 
 .banner {
 	background:url('../img/banner.jpg') no-repeat;
+	background-size: cover;
 	display: flex;
 	align-items: flex-end;
 	height: 600px;
