--- a/styles/module/header.css
+++ b/styles/module/header.css
@@ -6,8 +6,10 @@ header{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
 	padding: 20px;
 	transition: all 0.4s ease;
+	background: rgba(0,0,0,0.65);
 }
 
 header h1 {
@@ -23,17 +25,50 @@ header h1 span {
 	height: 25px;
 	transition: all 0.4s ease;
 }
+.mobile-menu {
+	position: absolute;
+	top:10px;
+	right: 10px;
+	color: #ffffff;
+	font-size: 2em;
+}
+header nav{
+	width: 100%;
+}
 
 header nav ul li{
-	display: inline-block;
+	display: block;
+	border-bottom:1px solid #000000;
 	margin-right: 20px;
+	padding: 10px;
+	font-size: 1.3em;
+}
+header nav ul li:last-child{
+	border-bottom: none;
 }
 header nav ul li a {
 	color:#ffffff;
 	text-decoration: none;
 }
 
-@media screen and (min-width: 760px) {
+
+
+@media screen and (min-width: 680px) {
+	header{
+		background: none;
+	}
+	header nav{
+		width: auto;
+	}
+	.mobile-menu {
+		display: none;
+	}
+	header nav ul li{
+		display: inline-block;
+		margin-right: 20px;
+		border-bottom: none;
+		font-size: 1em;
+	}
 	header h1 {
 		font-size: 3em;
 	}
