--- a/styles/state/sticky.css
+++ b/styles/state/sticky.css
@@ -1,7 +1,8 @@
 .sticky {
 	position: fixed;
-	background: rgba(0,0,0,0.5);
+	background: rgba(0,0,0,0.6);
 	padding: 10px 20px;
+	z-index: 100;
 }
 .sticky h1 {
 	font-size: 2em;
