--- a/styles/module/header.css
+++ b/styles/module/header.css
@@ -7,7 +7,7 @@ header{
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
-	padding: 20px;
+	padding: 10px 20px;
 	transition: all 0.4s ease;
 	background: rgba(0,0,0,0.65);
 }
@@ -28,7 +28,7 @@ header h1 span {
 .mobile-menu {
 	position: absolute;
 	top:10px;
-	right: 10px;
+	right: 20px;
 	color: #ffffff;
 	font-size: 2em;
 }
@@ -56,6 +56,7 @@ header nav ul li a {
 @media screen and (min-width: 680px) {
 	header{
 		background: none;
+		padding: 20px;
 	}
 	header nav{
 		width: auto;
