--- a/styles/module/header.css
+++ b/styles/module/header.css
@@ -17,6 +17,10 @@ header h1 {
 	font-weight: 300;
 	transition: all 0.4s ease;
 }
+header h1 a {
+	color: #ffffff;
+	text-decoration: none;
+}
 header h1 span {
 	display: inline-block;
 	background: url(../../img/logo-icon.png) no-repeat;
