--- a/styles/module/portfolio-preview.css
+++ b/styles/module/portfolio-preview.css
@@ -26,17 +26,15 @@
   left: 0;
   width: 0;
   transition: all 0.6s ease;
-  overflow: hidden;
-  padding: 0;
-  visibility: hidden;
+  padding:20px;
+  margin-left: -100%;
+  width: 100%;
+  left: 0;
+
 
 }
 .project-details.expanded{
-  right: 0;
-  display: block;
-  width: 100%;
-  padding: 20px;
-  visibility: visible;
+  margin:0;
 }
 .project-details img {
   max-width: 100%;
@@ -53,8 +51,9 @@
   .project-preview {
     width: 50%;
   }
-  .project-details.expanded{
+  .project-details{
     width: 50%;
+    margin-left: -50%;
   }
 
 }
