in media query for desktop override cases where mobile nav menu has been hidden, now a user can hide mobile menu and when they expand the view the menu should come back once they hit 680px

--- a/styles/module/header.css
+++ b/styles/module/header.css
@@ -65,6 +65,9 @@ header nav ul li a {
 	header nav{
 		width: auto;
 	}
+	header nav ul[style]{
+		display: block!important;
+	}
 	.mobile-menu {
 		display: none;
 	}
