--- a/styles/module/header.css
+++ b/styles/module/header.css
@@ -77,7 +77,7 @@ header nav ul li a {
 	}
 	header nav ul li{
 		display: inline-block;
-		margin-right: 20px;
+		margin: 0 20px 0 0;
 		border-bottom: none;
 		font-size: 1em;
 	}
