--- a/styles/module/portfolio-preview.css
+++ b/styles/module/portfolio-preview.css
@@ -21,7 +21,7 @@
 
 .project-details{
   position: absolute;
-  background: rgba(255,255,255,0.9);
+  background: rgba(255,255,255,1);
   z-index: 99;
   left: 0;
   width: 0;
@@ -30,6 +30,7 @@
   margin-left: -100%;
   width: 100%;
   left: 0;
+  border:1px solid #efefef;
 }
 
 .project-details.expanded{
