--- a/styles/base/default.css
+++ b/styles/base/default.css
@@ -13,10 +13,12 @@ h2 {
 	color: #2e9e74;
 	font-size: 2.4em;
 	font-weight: 300;
+	margin: 0.5em 0 1em 0;
 }
 
 h3 {
 	font-size: 1.6em;
+	margin: 0.5em 0 1em 0;
 }
 
 h4 {
